# simple-flask-app

./: FDataBase.py  flsite.db  flsite.py  pyproject.toml  sq_db.sql
static/css/: styles.css
templates/: about.html  add_post.html  base.html  contact.html  index.html  login.html  page404.html
